--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-db_connector = mongodb+srv://ademicho123:test1234@cluster0.xgolqbq.mongodb.net/MiniFilms?retryWrites=true&w=majority&appName=AtlasApp
+DB_CONNECTOR = mongodb+srv://ademicho123:test1234@cluster0.xgolqbq.mongodb.net/Piazza?retryWrites=true&w=majority&appName=AtlasApp
