--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_CONNECTOR = mongodb+srv://ademicho123:test1234@cluster0.xgolqbq.mongodb.net/Piazza?retryWrites=true&w=majority&appName=AtlasApp
+TOKEN_SECRET = 1$2$3$4$5$6$7$8$9$
